<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_salud"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="40dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edt_pension"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/edt_pension"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toStartOf="@+id/edt_salud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/edt_sal_total"
        android:layout_width="156dp"
        android:layout_height="46dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="29dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/edt_sal_b" />

    <EditText
        android:id="@+id/edt_sal_b"
        android:layout_width="153dp"
        android:layout_height="46dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="15dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/edt_sal_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/edt_salud" />

    <EditText
        android:id="@+id/edt_v_hr_extra"
        android:layout_width="180dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/edt_hr_extra" />

    <EditText
        android:id="@+id/edt_hr_extra"
        android:layout_width="180dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/edt_salario" />

    <EditText
        android:id="@+id/edt_salario"
        android:layout_width="180dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/edt_empleado" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="26dp"
        android:text="@string/empleado"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edt_empleado"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/sal"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edt_salario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="20dp"
        android:text="@string/hr_extra"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edt_hr_extra"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="8dp"
        android:text="@string/var_extra"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edt_v_hr_extra"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="47dp"
        android:text="@string/pension"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        android:text="@string/salud"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/edt_v_hr_extra" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="19dp"
        android:text="@string/sal_b"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/edt_sal_b"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pension" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="19dp"
        android:text="@string/sal_t"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_calcular"
        app:layout_constraintEnd_toStartOf="@+id/edt_sal_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="134dp"
        android:onClick="onClick"
        android:text="@string/calcular"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_sal_total" />

    <EditText
        android:id="@+id/edt_empleado"
        android:layout_width="180dp"
        android:layout_height="44dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>